--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,5 @@
 RewriteEngine on
 
 
-RewriteCond $1 !^(index\.php|assets|media|robots\.txt)
-RewriteRule ^(.*)$ /blog/index.php/$1 [L]
+RewriteCond $1 !^(index\.php|assets|robots\.txt)
+RewriteRule ^(.*)$ /churchweb/index.php/$1 [L]
